Homepage and service page bootstrap structure updated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,8 @@
 
 <main>
     <div class="jumbotron">
-        <h1>This is homepage</h1>
-        <p></p>
+        <h3 class="fs-3">I, Rahil Patel, welcomes you.</h3>
+        <p>I am a student.</p>
     </div>
 </main>
 
