--- a/views/services.ejs
+++ b/views/services.ejs
@@ -11,8 +11,80 @@
 
 <main>
     <div class="jumbotron">
-        <h1>This is services page.</h1>
-        <p></p>
+        <p class="text-start">I provide software solutions using following tools and software development methods and I
+            have a good expertise with them too.</p>
+        <div class="row g-4">
+            <div class="col">
+                <div class="card">
+                    <img src="assets/nodejs.png" class="card-img-top" alt="NodeJS">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">NodeJS</h5>
+                        <p class="card-text">Using express and fastify frameworks.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="assets/laravel.png" class="card-img-top" alt="Laravel">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Laravel</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="assets/python.png" class="card-img-top" alt="Python">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Python</h5>
+                        <p class="card-text">Django Framework</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="assets/angular.png" class="card-img-top" alt="Angular">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Angular</h5>
+                        <p class="card-text">Angular Framework version 6 onwards</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="assets/microsoft-dot-net.png" class="card-img-top" alt="Microsoft .Net">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Microsoft .Net</h5>
+                        <p class="card-text">Including .Net Core</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="assets/machine-learning.png" class="card-img-top" alt="Machine Learning">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Machine Learning</h5>
+                        <p class="card-text">Using python pandas.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="assets/ruby-on-rails.png" class="card-img-top" alt="Ruby on Rails">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Ruby on Rails</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="assets/microservices.png" class="card-img-top" alt="Microservices">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Microservices</h5>
+                        <p class="card-text">A best concept to choose for large scale systems.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 
