Navbar links position updated

--- a/views/common/navbar.ejs
+++ b/views/common/navbar.ejs
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">
-        <img class="d-inline-block align-top" width="150" src="assets/logo.png" alt="Home"/>
+        <img class="d-inline-block align-top" width="150" src="assets/logo.png" alt="Home" title="Home"/>
     </a>
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link" href="/projects">Projects</a>
+            <a class="nav-link" href="/projects" title="Projects">Projects</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/services">Services</a>
+            <a class="nav-link" href="/services" title="Services">Services</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/about-me">About Me</a>
+            <a class="nav-link" href="/about-me" title="About Me">About Me</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/contact-me">Contact Me</a>
+            <a class="nav-link" href="/contact-me" title="Contact Me">Contact Me</a>
         </li>
     </ul>
 </nav>
