About me and Projects page bootstrap structure updated

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -11,8 +11,97 @@
 
 <main>
     <div class="jumbotron">
-        <h1>This is projects page</h1>
-        <p></p>
+        <h5>Below are the projects on which I have worked so far.</h5>
+
+        <div class="accordion" id="projectsAccordian">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="projectOneHeader">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#projectOneInfo" aria-expanded="true" aria-controls="projectOneInfo">
+                        Project #1
+                    </button>
+                </h2>
+                <div id="projectOneInfo" class="accordion-collapse collapse show" aria-labelledby="projectOne">
+                    <div class="accordion-body">
+                        <div class="card">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="..." class="img-fluid rounded-start" alt="Project 1">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <!--                                        <h5 class="card-title">Card title</h5>-->
+                                        <p class="card-text">This is a wider card with supporting text below as a
+                                            natural lead-in to additional content. This content is a little bit
+                                            longer.</p>
+                                        <!--                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>-->
+                                        <!--                                        </p>-->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="projectTwoHeader">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#projectTwoInfo" aria-expanded="false" aria-controls="projectTwoInfo">
+                        Project #2
+                    </button>
+                </h2>
+                <div id="projectTwoInfo" class="accordion-collapse collapse" aria-labelledby="projectTwoHeader">
+                    <div class="accordion-body">
+                        <div class="card">
+                            <div class="row g-0">
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <!--                                        <h5 class="card-title">Card title</h5>-->
+                                        <p class="card-text">This is a wider card with supporting text below as a
+                                            natural lead-in to additional content. This content is a little bit
+                                            longer.</p>
+                                        <!--                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>-->
+                                        <!--                                        </p>-->
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <img src="..." class="img-fluid rounded-start" alt="Project #2">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="projectThreeHeader">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#projectThreeInfo" aria-expanded="false" aria-controls="projectThreeInfo">
+                        Project #3
+                    </button>
+                </h2>
+                <div id="projectThreeInfo" class="accordion-collapse collapse" aria-labelledby="projectThreeHeader">
+                    <div class="accordion-body">
+                        <div class="card">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="..." class="img-fluid rounded-start" alt="Project #3">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <!--                                        <h5 class="card-title">Card title</h5>-->
+                                        <p class="card-text">This is a wider card with supporting text below as a
+                                            natural lead-in to additional content. This content is a little bit
+                                            longer.</p>
+                                        <!--                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>-->
+                                        <!--                                        </p>-->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 
