--- a/views/about-me.ejs
+++ b/views/about-me.ejs
@@ -11,8 +11,25 @@
 
 <main>
     <div class="jumbotron">
-        <h1>This is about me page</h1>
-        <p></p>
+        <div class="card mb-6">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="assets/profile-picture.jpg" class="img-fluid rounded-circle" alt="Rahil Patel">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Rahilkumar Jayendrakumar Patel</h5>
+                        <h6 class="fs-6">Independent Software Consulatant & Solution Architect</h6>
+                        <p class="card-text">Experienced Polyglot Engineer with a demonstrated history of working in the
+                            computer software industry. Profound knowledge in Rails,Laravel,Magento, MySQL, PHP, jQuery
+                            etc. Strong engineering professional with a Bachelor of Engineering (BE) focused in Computer
+                            Science from Gujarat Technical university.</p>
+                        <p class="card-text"><small class="text-muted">Talks about #AWS, #RoR, #Laravel, #Magento2, and
+                                #RoRDeveloperTalks</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 
