--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -1,1 +1,17 @@
-<p class="text-center text-muted">&copy; Copyright 2021 Rahil Patel</p>
+<footer id="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="copyright-text text-center">
+                    <p>&copy; Copyright 2021 Rahil Patel</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- JavaScript Bundle with Popper -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/wow/0.1.9/wow.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
