--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -1,13 +1,42 @@
-<meta charset="UTF-8">
-<title>Rahil Patel Portfolio</title>
+<header id="header">
+<!--    <div class="container">-->
+<!--        <div class="row">-->
+<!--            <div class="col-sm-12 overflow">-->
+<!--                <div class="social-icons pull-right">-->
+<!--                    <ul class="nav nav-pills">-->
+<!--                        <li><a href="https://twitter.com/patelrahil43?lang=en" target="_blank"><i-->
+<!--                                        class="fa fa-twitter"></i></a></li>-->
+<!--                        <li><a href="https://in.linkedin.com/in/patelrahil43" target="_blank"><i-->
+<!--                                        class="fa fa-linkedin"></i></a></li>-->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+    <div class="navbar navbar-inverse" role="banner">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
 
-<link rel="icon" type="image/png" href="assets/favicon.png"/>
+                <a class="navbar-brand" href="/">
+                    <h1><img src="assets/logo_size.jpg" alt="logo"></h1>
+                </a>
 
-<!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-        crossorigin="anonymous"></script>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li <% if(nav == "index") { %> class="active" <% }%> ><a href="/">Home</a></li>
+                    <li <% if(nav == "about-me") { %> class="active" <% }%>><a href="/about-me">About Me</a></li>
+                    <li <% if(nav == "projects") { %> class="active" <% }%>><a href="/projects ">Projects</a></li>
+                    <li <% if(nav == "services") { %> class="active" <% }%>><a href="/services ">Services</a></li>
+                    <li <% if(nav == "contact-me") { %> class="active" <% }%>><a href="/contact-me ">Contact Me</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</header>
