--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,96 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('common/header'); %>
-</head>
-<body class="container">
 
-<header>
-    <%- include('common/navbar'); %>
-</header>
+    <! -- head -- >
+    <%- include('common/head'); %>
+    <! -- head -- >
+</head><!--/head-->
 
-<main>
-    <div class="jumbotron">
-        <p class="text-start">I provide software solutions using following tools and software development methods and I
-            have a good expertise with them too.</p>
-        <div class="row g-4">
-            <div class="col">
-                <div class="card">
-                    <img src="assets/nodejs.png" class="card-img-top" alt="NodeJS">
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">NodeJS</h5>
-                        <p class="card-text">Using express and fastify frameworks.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="assets/laravel.png" class="card-img-top" alt="Laravel">
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Laravel</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="assets/python.png" class="card-img-top" alt="Python">
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Python</h5>
-                        <p class="card-text">Django Framework</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="assets/angular.png" class="card-img-top" alt="Angular">
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Angular</h5>
-                        <p class="card-text">Angular Framework version 6 onwards</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="assets/microsoft-dot-net.png" class="card-img-top" alt="Microsoft .Net">
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Microsoft .Net</h5>
-                        <p class="card-text">Including .Net Core</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="assets/machine-learning.png" class="card-img-top" alt="Machine Learning">
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Machine Learning</h5>
-                        <p class="card-text">Using python pandas.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="assets/ruby-on-rails.png" class="card-img-top" alt="Ruby on Rails">
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Ruby on Rails</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="assets/microservices.png" class="card-img-top" alt="Microservices">
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Microservices</h5>
-                        <p class="card-text">A best concept to choose for large scale systems.</p>
+<body>
+
+<! -- header -- >
+<%- include('common/header'); %>
+<! -- /header-- >
+
+<section id="page-breadcrumb">
+    <div class="vertical-center sun">
+        <div class="container">
+            <div class="row">
+                <div class="action">
+                    <div class="col-sm-12">
+                        <h1 class="title">Service</h1>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</main>
+</section>
+<!--/#action-->
 
-<footer>
-    <%- include('common/footer'); %>
-</footer>
+<section id="services">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="300ms">
+                <div class="single-service">
+                    <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="300ms">
+                        <img src="assets/web.png" alt="">
+                    </div>
+                    <h2>Web Development</h2>
+                    <p>I have the experience and capabilities to build web applications and enterprise applications for
+                        large enterprises and organizations.</p>
+                    <ul class="list-inline">
+                        <li class="list-inline-item">Laravel</li>
+                        <li class="list-inline-item">ROR</li>
+                        <li class="list-inline-item">Magento</li>
+                        <li class="list-inline-item">Django</li>
+                    </ul>
+
+                </div>
+            </div>
+            <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
+                <div class="single-service">
+                    <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="600ms">
+                        <img src="assets/react native.jpg" alt="">
+                    </div>
+                    <h2>Mobile Development</h2>
+                    <ul class="list-inline">
+                        <p>I have expertise in creating Mobile application using React Native. I have development more
+                            than 3 apps using React native</p>
+                        <li class="list-inline-item">React Native</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
+                <div class="single-service">
+                    <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="900ms">
+                        <img src="assets/solution architect.jpeg" alt="">
+                    </div>
+                    <h2>Solution Architect & Solution Consultant</h2>
+                    <p>I provide guidance and help to build robust application architecture that long last for years. I
+                        have expertise in AWS,Google cloud and Azure Cloud platforms</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--/#portfolio-->
+
+
+<! -- footer -- >
+<%- include('common/footer'); %>
+<! -- footer -- >
 
 </body>
 </html>
