Code refactoring and formatting and integrated express generator

--- a/public/css/lightbox.css
+++ b/public/css/lightbox.css
@@ -1,4 +1,9 @@
-/* Preload images */
+/**
+* name: main.css
+* Student ID: 301166451
+* Student Name: Rahilkumar Patel
+* Date: 02-10-2021
+*/
 body:after {
   display: none;
 }
