--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,3 +1,9 @@
+/**
+* name: main.css
+* Student ID: 301166451
+* Student Name: Rahilkumar Patel
+* Date: 02-10-2021
+*/
 @media only screen and (min-width: 768px) {
     .nav.navbar-nav>li:hover>ul.sub-menu {
         display: block;
