--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,10 @@
+/**
+* name: main.css
+* Student ID: 301166451
+* Student Name: Rahilkumar Patel
+* Date: 02-10-2021
+*/
+
   @import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700);
   @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700);
   @import url(http://fonts.googleapis.com/css?family=Noto+Sans:400,700);
