Included login template and route with 404 error handling

--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -24,7 +24,7 @@
                 </button>
 
                 <a class="navbar-brand" href="/">
-                    <h1><img src="assets/logo_size.jpg" alt="logo"></h1>
+                    <h1><img src="/assets/logo_size.jpg" alt="logo"></h1>
                 </a>
 
             </div>
@@ -35,6 +35,7 @@
                     <li <% if(nav == "projects") { %> class="active" <% }%>><a href="/projects ">Projects</a></li>
                     <li <% if(nav == "services") { %> class="active" <% }%>><a href="/services ">Services</a></li>
                     <li <% if(nav == "contact-me") { %> class="active" <% }%>><a href="/contact-me ">Contact Me</a></li>
+                    <li <% if(nav == "login") { %> class="active" <% }%>><a href="/login ">Login</a></li>
                 </ul>
             </div>
         </div>
