--- a/views/common/navbar.ejs
+++ b/views/common/navbar.ejs
@@ -25,7 +25,7 @@
                 </button>
 
                 <a class="navbar-brand" href="index.html">
-                    <h1><img src="images/logo.png" alt="logo"></h1>
+                    <h1><img src="/images/logo.png" alt="logo"></h1>
                 </a>
 
             </div>
@@ -82,7 +82,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">
-        <img class="d-inline-block align-top" width="150" src="assets/logo.png" alt="Home" title="Home"/>
+        <img class="d-inline-block align-top" width="150" src="/assets/logo.png" alt="Home" title="Home"/>
     </a>
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
