--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -30,12 +30,17 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li <% if(nav == "index") { %> class="active" <% }%> ><a href="/">Home</a></li>
-                    <li <% if(nav == "about-me") { %> class="active" <% }%>><a href="/about-me">About Me</a></li>
-                    <li <% if(nav == "projects") { %> class="active" <% }%>><a href="/projects ">Projects</a></li>
-                    <li <% if(nav == "services") { %> class="active" <% }%>><a href="/services ">Services</a></li>
-                    <li <% if(nav == "contact-me") { %> class="active" <% }%>><a href="/contact-me ">Contact Me</a></li>
-                    <li <% if(nav == "login") { %> class="active" <% }%>><a href="/login ">Login</a></li>
+                    <li <% if(nav === "index") { %> class="active" <% }%> ><a href="/">Home</a></li>
+                    <li <% if(nav === "about-me") { %> class="active" <% }%>><a href="/about-me">About Me</a></li>
+                    <li <% if(nav === "projects") { %> class="active" <% }%>><a href="/projects">Projects</a></li>
+                    <li <% if(nav === "services") { %> class="active" <% }%>><a href="/services">Services</a></li>
+                    <li <% if(nav === "contact-me") { %> class="active" <% }%>><a href="/contact-me">Contact Me</a></li>
+                    <% if(user && user.user) { %>
+                        <li class="active"><a href="#">Welcome, <%= user.user %></a></li>
+                        <li><a href="/logout" class="nav-link">Logout</a></li>
+                    <% } else { %>
+                        <li <% if(nav === "login") { %> class="active" <% }%>><a href="/login">Login</a></li>
+                    <% } %>
                 </ul>
             </div>
         </div>
