Removed registration related functionalities

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -51,9 +51,9 @@
                                id="password" required>
                     </fieldset>
 
-                    <fieldset class="form-group text-left">
-                        Don't have account? &nbsp;&nbsp;<b><a href="/register">Sign Up</a></b>
-                    </fieldset>
+<!--                    <fieldset class="form-group text-left">-->
+<!--                        Don't have account? &nbsp;&nbsp;<b><a href="/register">Sign Up</a></b>-->
+<!--                    </fieldset>-->
                     <fieldset class="form-group text-right">
                         <input type="submit" class="btn btn-primary" value="Login">
                         <a href="/">
