--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
                     <h1>Hi there!</h1>
                     <p>I am a Software Engineer. I have have 8+ years of experience in the software Industry. I am
                         an E-commerce and Cloud Specialist.</p>
-                    <a href="/assets/CV_Rahil_m.pdf" download class="btn btn-common">My Resume</a>
+                    <a href="/assets/CV_Rahil_m.pdf" download class="btn btn-common">My CV</a>
                 </div>
                 <img src="/assets/profile-picture.jpg" class="slider-hill" width="400" height="410" alt="image">
             </div>
